WIP: Adding test to autocompletion on python console
Try to:
* use QtTesting
* write into the console
* use tab to call the autocompleter
* get back what's written in the console

--- a/Libs/Scripting/Python/Widgets/Testing/Cpp/CMakeLists.txt
+++ b/Libs/Scripting/Python/Widgets/Testing/Cpp/CMakeLists.txt
@@ -2,6 +2,7 @@ set(KIT ${PROJECT_NAME})
 
 create_test_sourcelist(Tests ${KIT}CppTests.cpp
   ctkPythonConsoleTest1.cpp
+  ctkPythonConsoleTest2.cpp
   #EXTRA_INCLUDE TestingMacros.h
   )
 
@@ -18,3 +19,4 @@ target_link_libraries(${KIT}CppTests ${LIBRARY_NAME} ${CTK_BASE_LIBRARIES})
 #
 
 SIMPLE_TEST( ctkPythonConsoleTest1 )
+SIMPLE_TEST( ctkPythonConsoleTest2 )
